  AbstractRemoteEntityConnection.RemoteEntityConnectionHandler.ACTIVE_CONNECTIONS is now a Set
  PetstoreApplicationModel constructor now adds all entity models so that the load test works
  SerializationWhitelist.SerializationFilter.allowedClassnames is now a Set instead of a List
  DefaultProperty.DefaultColumnProperty serialVersionUID added
  DefaultEntityDefinition constructor simplified, relevant methods moved from Entities, Entities.DefaultStringProvider added
  EntityService, now invalidates session on invalid header client id
  CredentialsProvider added along with a default implementation CredentialServer.DefaultCredentialsProvider
  AbstractRemoteEntityConnection, minor refactoring
  AbstractServer.containsConnection() removed, some javadoc improvements
  org/jminor/common/version.properties file added, used by Version class and gradle build
  buildReports gradle build task now defines input and output, UP-TO-DATE works now
  buildTime property added to org/jminor/common/version.properties before common.core jar is created, org.jminor.common.Version updated accordingly
  3d party libraries upgraded
  Minor refactoring of EntityInputProvider, IntegerInputProvider and LongInputProvider
  SwingTableSelectionModel.getSelectedIndexes() now returns right away if selection is empty
  EntityGeneratorModel, 'Properties.' prefix removed, assumes static import of org.jminor.framework.domain.Properties.*
  Sonarqube run
  EntityApplicationPanel.showEntityPanelDialog() bug fixed, now calls savePreferences() on both the panel and model when closing the dialog
  IntelliJ code analysis run
  Entity.Validator.performLengthValidation() added, implemented and used in Entities.Validator
  H2Database upgraded to 1.4.198, plus some minor refactoring
0.11.7 [client/server incompatible with earlier versions due to EntityConditions changes]
  Conditions.stringCondition() moved to EntityConditions, due to serialization related bug